WebCore/platform/mac/ContextMenuMac.mm
@@ -28,55 +28,6 @@
 
 #if ENABLE(CONTEXT_MENUS)
 
-#include "ContextMenuController.h"
-
-@interface WebCoreMenuTarget : NSObject {
-    WebCore::ContextMenuController* _menuController;
-}
-+ (WebCoreMenuTarget*)sharedMenuTarget;
-- (WebCore::ContextMenuController*)menuController;
-- (void)setMenuController:(WebCore::ContextMenuController*)menuController;
-- (void)forwardContextMenuAction:(id)sender;
-- (BOOL)validateMenuItem:(NSMenuItem *)item;
-@end
-
-static WebCoreMenuTarget* target;
-
-@implementation WebCoreMenuTarget
-
-+ (WebCoreMenuTarget*)sharedMenuTarget
-{
-    if (!target)
-        target = [[WebCoreMenuTarget alloc] init];
-    return target;
-}
-
-- (WebCore::ContextMenuController*)menuController
-{
-    return _menuController;
-}
-
-- (void)setMenuController:(WebCore::ContextMenuController*)menuController
-{
-    _menuController = menuController;
-}
-
-- (void)forwardContextMenuAction:(id)sender
-{
-    WebCore::ContextMenuItem item(WebCore::ActionType, static_cast<WebCore::ContextMenuAction>([sender tag]), [sender title]);
-    _menuController->contextMenuItemSelected(&item);
-}
-
-- (BOOL)validateMenuItem:(NSMenuItem *)item
-{
-    WebCore::ContextMenuItem coreItem(item);
-    ASSERT(_menuController->contextMenu());
-    _menuController->contextMenu()->checkOrEnableIfNeeded(coreItem);
-    return coreItem.enabled();
-}
-
-@end
-
 namespace WebCore {
 
 ContextMenu::ContextMenu(const HitTestResult& result)
@@ -85,35 +36,23 @@ ContextMenu::ContextMenu(const HitTestResult& result)
     NSMutableArray* array = [[NSMutableArray alloc] init];
     m_platformDescription = array;
     [array release];
-
-    [[WebCoreMenuTarget sharedMenuTarget] setMenuController:controller()];
 }
 
 ContextMenu::ContextMenu(const HitTestResult& result, const PlatformMenuDescription menu)
     : m_hitTestResult(result)
     , m_platformDescription(menu)
 {
-    [[WebCoreMenuTarget sharedMenuTarget] setMenuController:controller()];
 }
 
 ContextMenu::~ContextMenu()
 {
-}
- 
-static void setMenuItemTarget(NSMenuItem* menuItem)
-{
-    [menuItem setTarget:[WebCoreMenuTarget sharedMenuTarget]];
-    [menuItem setAction:@selector(forwardContextMenuAction:)];
 }
 
 void ContextMenu::appendItem(ContextMenuItem& item)
 {
     checkOrEnableIfNeeded(item);
 
-    ContextMenuItemType type = item.type();
     NSMenuItem* platformItem = item.releasePlatformDescription();
-    if (type == ActionType)
-        setMenuItemTarget(platformItem);
 
     [m_platformDescription.get() addObject:platformItem];
     [platformItem release];
@@ -123,10 +62,7 @@ void ContextMenu::insertItem(unsigned position, ContextMenuItem& item)
 {
     checkOrEnableIfNeeded(item);
 
-    ContextMenuItemType type = item.type();
     NSMenuItem* platformItem = item.releasePlatformDescription();
-    if (type == ActionType)
-        setMenuItemTarget(platformItem);
 
     [m_platformDescription.get() insertObject:platformItem atIndex:position];
     [platformItem release];
